--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.html-content {
+  a {
+    color: #a68448;
+    font-weight: 500;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
